src/objects/Apttus_Config2__ConfigFlow__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to define a UI flow for CPQ</description>
    <fields>
        <fullName>Apttus_Config2__AssetsPage__c</fullName>
        <defaultValue>&quot;SelectInstalledProductsEn&quot;</defaultValue>
        <description>The assets page. Specify one of the following pages or a custom page. 

SelectInstalledProducts
SelectInstalledProductsEn</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The assets page. Specify one of the following pages or a custom page. 

SelectInstalledProducts
SelectInstalledProductsEn</inlineHelpText>
        <label>Assets Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CartPage__c</fullName>
        <defaultValue>&quot;CartDetailView&quot;</defaultValue>
        <description>The cart page. Specify one of the following pages or a custom page. 

CartView 
CartDetailView</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The cart page. Specify one of the following pages or a custom page. 

CartView 
CartDetailView</inlineHelpText>
        <label>Cart Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CatalogPage__c</fullName>
        <defaultValue>&quot;SelectConfigProductsFilterView&quot;</defaultValue>
        <description>The catalog page. Specify one of the following pages or a custom page.

SelectConfigProducts
SelectConfigProductsFilterView</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The catalog page. Specify one of the following pages or a custom page.

SelectConfigProducts
SelectConfigProductsFilterView</inlineHelpText>
        <label>Catalog Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__OptionsPage__c</fullName>
        <defaultValue>&quot;ConfigureBundle&quot;</defaultValue>
        <description>The options page. Specify one of the following pages or a custom page. 

ConfigureBundle 
SelectConfigOptions
SelectConfigOptionsTabView
SelectConfigOptionsListView
SelectConfigOptionsTreeView
SelectConfigOptionsDetailView
SelectBundleOptions</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The options page. Specify one of the following pages or a custom page. 

ConfigureBundle 
SelectConfigOptions
SelectConfigOptionsTabView
SelectConfigOptionsListView
SelectConfigOptionsTreeView
SelectConfigOptionsDetailView
SelectBundleOptions</inlineHelpText>
        <label>Options Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductAttributeDetailPage__c</fullName>
        <defaultValue>&quot;ProductAttributeDetail3&quot;</defaultValue>
        <description>The product attribute detail page. Specify the following page or a custom page. 

ProductAttributeDetail3</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The product attribute detail page. Specify the following page or a custom page. 

ProductAttributeDetail3</inlineHelpText>
        <label>Product Attribute Detail Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Config Flow</label>
</CustomObject>